@@ -2,13 +2,21 @@ public class Main {
   public static void main(String[] args) {
     System.out.printf("Hello and welcome!\n");
 
-    Integer i1 = new Integer(1);
-    Integer i2 = new Integer(1);
-    System.out.println(i1 == i2); // false
+//    Integer i1 = new Integer(1);
+//    Integer i2 = new Integer(1);
+//    System.out.println(i1 == i2); // false
+//
+//    Integer i3 = Integer.valueOf(1);
+//    Integer i4 = Integer.valueOf(1);
+//    System.out.println(i3 == i4); // true
 
-    Integer i3 = Integer.valueOf(1);
-    Integer i4 = Integer.valueOf(1);
-    System.out.println(i3 == i4); // true
+    Integer i1 = 100;
+    Integer i2 = 100;
+    System.out.println(i1 == i2);
+
+    Integer i3 = 128;
+    Integer i4 = 128;
+    System.out.println(i3 == i4);
 
 
   }
